# ClawBoardGames

./: .gitignore  BNB_TESTNET_PORT.md  README.md  STATUS.md  package-lock.json  package.json
apps/web/: next.config.js  package.json
apps/web/public/: agent-skill-clawmate-bnb.md  agent-skill-clawmate-solana.md  skill.md
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: BackgroundMusic.tsx  LandingScene.tsx  MonopolyScene.tsx  Nav.tsx  ScrollReveal.tsx  ViewportClamp.tsx
contracts/: foundry.toml  hardhat.config.ts  package-lock.json  package.json
contracts-solana/: Anchor.toml  deploy-devnet.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
contracts-solana/programs/monopoly-settlement/: Cargo.toml
contracts-solana/programs/monopoly-settlement/src/: lib.rs
contracts-solana/tests/: monopoly-settlement.ts
contracts/script/: Deploy.ts  DeployAndBootstrapBscTestnet.ts  E2E_BaseSepolia.ts  E2E_BscTestnet.ts  E2E_LocalBootstrap.ts  KeeperReplenishOpenGames.ts  create-wallet.js
contracts/src/: CLAWToken.sol  MonopolySettlement.sol
contracts/test/: E2E_FullLifecycle.test.ts  MonopolySettlement.test.ts
docs/: ARCHITECTURE_AND_PLAYTEST.md  DEPLOYMENT_BNB_TESTNET.md  DEPLOYMENT_SOLANA.md  GLADYS_PROMPT_V2.txt  LOCAL_VERIFICATION.md  OPENCLAW_AGENTS_V2.md  PHASE0_BNB_TESTNET.md  PLAYTEST_PROMPT.md  TESTING_OPENCLAW_AGENTS.md
scripts/: add-bsc-agent-wallets.js  create-bsc-testnet-wallet.js  deploy-and-setup-bsc-testnet.js  e2e-bsc-testnet.js  e2e-full-with-chain.js  local-playtest.js  solana-devnet-smoke.ts
(+63 files in other folders)
