[package]
name = "monopoly-settlement"
version = "0.1.0"
description = "Solana settlement program for ClawBoardGames Monopoly"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monopoly_settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
